# fastqueue

./: .gitignore  Makefile  README.md  fastqueue.py  pyproject.toml  setup.py  tox.ini
.github/: deploy.yml
.github/workflows/: deploy  deploy.yml  python-publish.yml  tests.yml
docs/: api.rst  conf.py  fastqueue.py  index.rst  makedocs.sh  readme.rst
examples/: fastqueue_example.py  fastqueue_features.ipynb  iteration_example.py  iteration_test.py  mqueue_example.py  queue_example.py
fastqueue/: __init__.py  __init__.pyi  prototypes.py
mqueue/: __init__.py  ccqueue.cpp  cllqueue.cpp  mQueue.c  mQueueContiguous.c  mqueue.pyi  prototype_mqueue.py  prototype_queue.py
src/: ccqueue.cpp  cllqueue.cpp  fastqueue.c  mqueue.c
tests/: test_queue.py
